[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybersecllm"
version = "1.0.0"
description = "Fine-tuned T5 model for cybersecurity question answering"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Shivam Arora"}
]
keywords = [
    "cybersecurity",
    "nlp",
    "transformers",
    "t5",
    "question-answering",
    "machine-learning",
    "deep-learning",
    "huggingface"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "sentencepiece>=0.1.99",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
demo = [
    "gradio>=4.0.0",
    "streamlit>=1.25.0",
]
eval = [
    "sacrebleu>=2.3.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
]
all = [
    "cybersecllm[dev,demo,eval]",
]

[project.urls]
Homepage = "https://github.com/Shiv-aurora/Finetuned-CyberSec-Agent"
Documentation = "https://github.com/Shiv-aurora/Finetuned-CyberSec-Agent/tree/main/docs"
Repository = "https://github.com/Shiv-aurora/Finetuned-CyberSec-Agent.git"
Issues = "https://github.com/Shiv-aurora/Finetuned-CyberSec-Agent/issues"

[project.scripts]
cybersecllm-train = "scripts.train:main"
cybersecllm-eval = "scripts.evaluate:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

